# building-with-coding-agents-jul2026

./: .gitignore  README.md  build_docs.py  pyproject.toml
data/: sales_2022_01.csv  sales_2022_02.csv  sales_2022_03.csv  sales_2022_04.csv  sales_2022_05.csv  sales_2022_06.csv  sales_2022_07.csv  sales_2022_08.csv  sales_2022_09.csv  sales_2022_10.csv  sales_2022_11.csv  sales_2022_12.csv
docs/: solutions.html  workshop.html
solutions/exercise-1/: CLAUDE-example.md  SOLUTION.md
solutions/exercise-2/: SOLUTION.md  settings.json  ui-style-SKILL.md
solutions/exercise-3/: SOLUTION.md  style-reviewer.md
solutions/exercise-4/: SOLUTION.md  check-dashboard.md  mcp-setup.md
solutions/exercise-5/: SOLUTION.md  rubric-example.md
solutions/reference-dashboard/: README.md
solutions/reference-dashboard/dashboard/: app.py  data_loader.py
solutions/reference-dashboard/dashboard/views/: channels.py  geography.py  profitability.py  trends.py
workshop/: presentation.pptx
workshop/exercise-1-the-brief/: CLAUDE-template.md  README.md  requirements-card.md  starter-prompt.md
workshop/exercise-2-standards-and-limits/: README.md  SKILL-template.md
workshop/exercise-2-standards-and-limits/hook-template/: block_data_edits.py  settings.json
workshop/exercise-3-delegation/: README.md  reviewer-template.md
workshop/exercise-4-self-verification/: README.md
workshop/exercise-5-evaluation/: README.md  rubric-template.md
